# bubbles

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  sample.bam.bai
example/src/: main.rs
src/: bam.rs  error.rs  lib.rs  main.rs
src/bai/: mod.rs  reader.rs
src/bam/: builder.rs  cigar.rs  header.rs  mod.rs  pileup.rs  query.rs  reader.rs  tags.rs
