[package]
name = "bubbles"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["sequencing", "bioinformatics"]
authors = ["Eilidh Ward"]
categories = ["science", "filesystem"]
description = "A terribly named, memory efficient, fast BAM file parser"
repository = "https://github.com/aylz83/bubbles"

[dependencies]
async-trait = "0.1.86"
byteorder = "1.5.0"
futures = "0.3.30"
log = "0.4.22"
rustc-hash = "2.0.0"
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["full"] }
pufferfish = { path = "../pufferfish-rs" }
bitflags = "2.9.1"
