[package]
name = "bubbles"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["sequencing", "bioinformatics"]
authors = ["Eilidh Ward"]
categories = ["science", "filesystem"]
description = "A terribly named, memory efficient, fast BAM file parser"
repository = "https://github.com/aylz83/bubbles"

[dependencies]
async-trait = "0.1.88"
byteorder = "1.5.0"
futures = "0.3.31"
log = "0.4.27"
rustc-hash = "2.1.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
pufferfish = { path = "../pufferfish-rs" }
bitflags = "2.9.1"
hashbrown = "0.15.4"
