[package]
name = "bubbles"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["sequencing", "bioinformatics"]
authors = ["Eilidh Ward"]
categories = ["science", "filesystem"]
description = "A terribly named, memory efficient, fast BAM file parser"
repository = "https://github.com/aylz83/bubbles"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-compression = { version = "0.4.12", features = ["gzip", "tokio"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
rustc-hash = "2.0.0"
tokio = { version = "1.43.1", features = ["full"] }

[lib]
name = "bubbles"
path = "src/lib.rs"

[[bin]]
name = "bubbles_example"
path = "src/main.rs"
